style/fix: fix scrolling on mobile

--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -18,9 +18,8 @@ html {
 
 body {
   width: 100vw;
-  min-height: 100vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  height: 100vh;
+  overflow: hidden;
   overscroll-behavior: none;
 }
 
@@ -33,12 +32,7 @@ body #___gatsby #gatsby-focus-wrapper {
   width: 100%;
   height: 100%;
   display: flex;
-  position: relative;
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
-}
-
-.test {
-  border: 1px solid red;
 }
